Fix typo on Manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Improved BGA game info",
-    "description": "Be able to see more information from a game in Board Game Arena using Board Game Geed information.",
+    "description": "Be able to see more information from a game in Board Game Arena using Board Game Geek information.",
     "version": "1.0",
     "manifest_version": 2,
     "icons": {
