--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,20 @@
         "48": "icons/extension_toolbar_icon48.png",
         "128": "icons/extension_toolbar_icon128.png"
     },
+    "permissions": [
+        "activeTab",
+        "webRequest",
+        "webNavigation",
+        "<all_urls>"
+    ],
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": true
+    },
     "content_scripts": [{
         "css": ["styles.css"],
         "js": ["content.js"],
         "matches": ["https://boardgamearena.com/gamepanel*"],
         "run_at": "document_end"
     }]
-  }
+}
